--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-<style>
-                    <style>
-            @font-face {
+@font-face {
     font-family:'Roboto'; /* Ein Name, den du später verwendest */
     src: url('Ressources/Roboto/Roboto-Italic-VariableFont.ttf') format('ttf'), /* Pfad zur Schriftart */
          url('Ressources/Roboto/Roboto-VariableFont.ttf') format('ttf');  /* Alternative Formate */
@@ -13,19 +11,85 @@ body{
     font-family:'Roboto'
 }
 
-.header-image{
-    height: 100vh;
-    width: 100vw;
-    object-fit:cover;
-    filter: brightness(0.5);
+.box p{
+    line-height: 1.2;
+    color: #666;
+    font-size: 17px;
 }
 
-.logo{
+.box h4{
+    position: relative;
+    color: gold;
+}
+
+.box h3{
+    font-size: 19px;
+    padding: 10px 0px 6px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #444;
+}
+
+.burger-menu{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 32px;
-    left: 32px;
-    width: 250px;
-    height: auto;
+    right: 16px;
+    width: 40px;
+    height: 40px;
+    background: gold;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.burger-menu div {
+    width: 30px;
+    height: 3px;
+    background: black;
+    margin: 3px 0;
+}
+
+.burger-links{
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.85);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.burger-links a{
+    color: white;
+    text-decoration: none;
+    margin: 20px 0;
+    font-size: 1.5em;
+}
+
+.burger-links a:hover {
+    color: gold;
+}
+
+.burger-links button {
+    margin-top: 30px;
+    padding: 10px 20px;
+    font-size: 1em;
+    color: rgb(0, 0, 0);
+    background: gold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.burger-links button:hover{
+    background: white;
+    color: rgb(0, 0, 0);
 }
 
 .content{
@@ -42,6 +106,86 @@ body{
 .content-highlights{
     color: gold;
     white-space: nowrap; 
+}
+
+.CV-container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 66%;
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.col header.title{
+    font-family: Arial, Helvetica, sans-serif;
+    color: gold;
+    padding: 0px 0px 20px;
+}
+
+.col .contents{
+    padding: 0px 30px;
+    border-left: 2px solid #bababa;
+}
+
+.col .contents .box{
+    position: relative;
+    padding: 20px;
+    border: 1px solid #eaeaea;
+    background-color: #ffffff;
+    cursor: pointer;
+    transition: all 0.4s;
+    margin-bottom: 20px;
+}
+
+.col .contents .box:hover {
+    box-shadow: 0px 3px 12px 0px #ccc;
+    border: 1px solid transparent;
+}
+
+.col .contents .box::before {
+    content: " ";
+    color: gold;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    right: calc(100% + 22px);
+    top: 0;
+    background-color: gold;
+    border: 2px solid white;
+}
+
+.CV-container iframe {
+    height: auto;
+    align-items: center;
+    width: 95%;
+    height: 80%;
+    margin-left: 2.5%;
+}
+
+.CV-container p {
+    text-align: center;
+    color: gold;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.header-image{
+    height: 100vh;
+    width: 100vw;
+    object-fit:cover;
+    filter: brightness(0.5);
+}
+
+.logo{
+    position: absolute;
+    top: 32px;
+    left: 32px;
+    width: 250px;
+    height: auto;
 }
 
 .page-bottom {
@@ -69,30 +213,42 @@ body{
     text-decoration: none;
 }
 
-.CV-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    height: 66%;
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+main.row {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
 }
 
-.CV-container iframe {
-    height: auto;
-    align-items: center;
-    width: 95%;
-    height: 80%;
-    margin-left: 2.5%;
+.menu-link{
+    color: whitesmoke;
+    margin-left: 16px;
+    text-decoration: none;
 }
 
-.CV-container p {
-    text-align: center;
+.menu-link:hover {
     color: gold;
-    font-size: 14px;
-    font-weight: bold;
+}
+
+.navigation{
+    font-size: 24px;
+    position: absolute;
+    right: 32px;
+    top: 32px;
+    font-weight: 800;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navigation{
+    font-size: 24px;
+    position: absolute;
+    right: 32px;
+    top: 32px;
+    font-weight: 800;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .resume-container{
@@ -109,92 +265,9 @@ body{
     margin: 100px;
 }
 
-.navigation{
-    font-size: 24px;
-    position: absolute;
-    right: 32px;
-    top: 32px;
-    font-weight: 800;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.menu-link{
-    color: whitesmoke;
-    margin-left: 16px;
-    text-decoration: none;
-}
-
-.menu-link:hover {
-    color: gold;
-}
-
-.burger-menu {
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 32px;
-    right: 16px;
-    width: 40px;
-    height: 40px;
-    background: gold;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.burger-menu div {
-    width: 30px;
-    height: 3px;
-    background: black;
-    margin: 3px 0;
-}
-
-.burger-links {
-    display: none;
-    flex-direction: column;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.85);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.burger-links a {
-    color: white;
-    text-decoration: none;
-    margin: 20px 0;
-    font-size: 1.5em;
-}
-
-.burger-links a:hover {
-    color: gold;
-}
-
-.burger-links button {
-    margin-top: 30px;
-    padding: 10px 20px;
-    font-size: 1em;
-    color: rgb(0, 0, 0);
-    background: gold;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.burger-links button:hover {
-    background: white;
-    color: rgb(0, 0, 0);
-}
-
 .social-links{
-margin-left: 5px;    text-decoration: none; 
+    margin-left: 5px;
+    text-decoration: none; 
 }
 
 .social-links img{
@@ -203,10 +276,56 @@ margin-left: 5px;    text-decoration: none;
 }
 
 .social-links p{
-margin-left: 25px;
+    margin-left: 25px;
     margin-top: 7px;
 }
 
+.typing-text{
+    font-size: 1em; /* Passt die Schriftgröße an die <h1> an */
+    font-weight: bold;
+    position: relative;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.typing-text span::before{
+    content: 'my career';
+    color: gold;
+    animation: words 4s infinite;
+}
+
+.underconstruction{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    padding: 10px;
+    width: 100%;
+}
+
+.underconstruction img{
+    height: 250px;
+    width: auto;
+    margin-bottom: 25%;
+}
+
+@keyframes cursor{
+    to{
+        border-left: 3px solid gold;
+    }
+}
+
+@keyframes words{
+    0%, 33% {
+        content: 'my resume';
+    }
+    34%, 67% {
+        content: 'my portfolio';
+    }
+    68%, 100% {
+        content: 'my coding projects';
+    }
+}
 
 @media (max-width: 768px) {
     .navigation {
@@ -249,125 +368,3 @@ margin: 0;
         height: 15px; 
     }
 }
-
-
-main.row {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-}
-
-.col header.title {
-    font-family: Arial, Helvetica, sans-serif;
-    color: gold;
-    padding: 0px 0px 20px;
-}
-
-.col .contents {
-    padding: 0px 30px;
-    border-left: 2px solid #bababa;
-}
-
-.col .contents .box {
-    position: relative;
-    padding: 20px;
-    border: 1px solid #eaeaea;
-    background-color: #ffffff;
-    cursor: pointer;
-    transition: all 0.4s;
-    margin-bottom: 20px;
-}
-
-.col .contents .box:hover {
-    box-shadow: 0px 3px 12px 0px #ccc;
-    border: 1px solid transparent;
-}
-
-.col .contents .box::before {
-    content: " ";
-    color: gold;
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    right: calc(100% + 22px);
-    top: 0;
-    background-color: gold;
-    border: 2px solid white;
-}
-
-.box h4 {
-    position: relative;
-    color: gold;
-}
-
-.box h3 {
-    font-size: 19px;
-    padding: 10px 0px 6px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #444;
-}
-
-.box p {
-    line-height: 1.2;
-    color: #666;
-    font-size: 17px;
-}
-
-.typing-text{
-    font-size: 1em; /* Passt die Schriftgröße an die <h1> an */
-        font-weight: bold;
-        position: relative;
-        white-space: nowrap;
-        overflow: hidden;
-}
-
-.typing-text span {
-    position: absolute;
-        top: 0;
-        left: 0;
-        font-size: inherit; /* Vererbt die Schriftgröße von .typing-text */
-        color: gold;
-        animation: typing 4s steps(30, end), blink 0.6s step-end infinite;
-}
-
-.typing-text span::before{
-    content: 'Software Developer';
-    color: gold;
-    animation: words 20s infinite;
-}
-
-
-
-@keyframes cursor{
-    to{
-        border-left: 3px solid gold;
-    }
-}
-
-@keyframes words{
-    0%, 20% {
-        content: 'my career';
-    }
-    21%, 40% {
-        content: 'my projects';
-    }
-    41%, 60% {
-        content: 'my creative output';
-    }
-    61%, 80% {
-        content: 'my personal projects';
-    }
-    81%, 100% {
-        content: 'what I read';
-    }
-}
-
-#chatbase-bubble-button {
-    position: fixed;
-    bottom: 1000px; /* Abstand vom unteren Rand */
-    right: 50px; /* Abstand vom rechten Rand */
-    z-index: 1000; /* Stellt sicher, dass die Bubble sichtbar bleibt */
-}
-
-        </style>
