--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ body{
     justify-content: center;
     align-items: center;
     gap: 15px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     padding: 10px;
 }
