--- a/style-resume.css
+++ b/style-resume.css
@@ -292,28 +292,6 @@ main.row {
 
 
 
-@media (max-width: 768px) {
-    .navigation {
-        display: none;
-    }
-
-    .bur
-
-    .page-bottom p{
-margin: 0;
-    }
-
-    .page-bottom-links {
-        order: 1; 
-        margin-bottom: 0;
-        font-size: 12px;
-        align-items: center;
-    }
-
-    .social-links img {
-        height: 15px; 
-    }
-}
 
 *{
     margin: 0;
@@ -321,6 +299,7 @@ margin: 0;
     font-family:Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+
 
 body {
     margin: 0px;
@@ -504,6 +483,45 @@ left: -20px;
         left: -15px;
     }
 
+    .navigation {
+        display: none;
+    }
+
+    .burger-menu {
+        display: flex;
+    }
+
+    .logo {
+        width: auto;
+        height: 30px; 
+        margin-right: auto;
+    }
+
+    .content {
+        font-size: 0.75em; 
+        max-width: 250px; 
+    }
+
+    .page-bottom {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .page-bottom p{
+margin: 0;
+    }
+
+    .page-bottom-links {
+        order: 1; 
+        margin-bottom: 0;
+        font-size: 12px;
+        align-items: center;
+    }
+
+    .social-links img {
+        height: 15px; 
+    }
 }
 
 .container h3{
@@ -517,7 +535,6 @@ left: -20px;
     margin-bottom: 0;
     padding-bottom: 10px;
     margin-top: 10px;
-
 }
 
 .container-head h1{
@@ -577,4 +594,3 @@ left: -20px;
 .container-head-download-area a:hover{
     background-color: #1d2433;
 }
-
